Fixed: Dark mode mantine

--- a/styles/cards.scss
+++ b/styles/cards.scss
@@ -4,6 +4,6 @@
 
 @layer components {
   .card {
-    @apply bg-white rounded-lg shadow-md  p-4 m-2 w-full  dark:shadow-orange-200 dark:bg-slate-800;
+    @apply bg-white rounded-lg shadow-md  p-4 m-2 w-full   dark:bg-gray-700;
   }
 }
